[project]
name = "thread-topology"
version = "0.1.0"
description = "Home Assistant integration to visualize Thread network topology"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Joan Josep Tortosa", email = "jjtortosa@users.noreply.github.com"}
]
requires-python = ">=3.11"
dependencies = [
    "homeassistant>=2024.1.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/jjtortosa/thread-topology"
Repository = "https://github.com/jjtortosa/thread-topology"
Issues = "https://github.com/jjtortosa/thread-topology/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["custom_components/thread_topology"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
